Fixed tags, so that they're lists now...

--- a/_posts/2016-07-25-pg-utils.md
+++ b/_posts/2016-07-25-pg-utils.md
@@ -2,7 +2,7 @@
 title: "Lessons Learned: When A Side-Project Is (Mostly) Deprecated"
 layout: post
 published: true
-tags: code, python, postgresql, spark, lessons learned
+tags: [code, python, postgresql, spark, lessons learned]
 date: 2016-07-25
 ---
 
