--- a/_posts/2016-07-25-pg-utils.md
+++ b/_posts/2016-07-25-pg-utils.md
@@ -12,7 +12,7 @@ With that out of the way, one of the open source side projects that I've been ha
 
 * __Easy Connections__:
 
-Of course, [psycopg2](http://initd.org/psycopg/docs/index.html) is the go-to Python library for connecting to PostgreSQL databases. Maybe it's just my laziness, but I've found the arguments to [psycopg2.connect](http://initd.org/psycopg/docs/module.html#psycopg2.connect) to be a bit annoying:
+Of course, [psycopg2](https://initd.org/psycopg/docs/index.html) is the go-to Python library for connecting to PostgreSQL databases. Maybe it's just my laziness, but I've found the arguments to [psycopg2.connect](https://initd.org/psycopg/docs/module.html#psycopg2.connect) to be a bit annoying:
 
 {% highlight python %}
 import psycopg2
@@ -27,7 +27,7 @@ conn = psycopg2.connect("dbname=test user=postgres password=secret")
 
 I often had to point myself back to the documentation to make sure I got the arguments/DSN right ("was that `user` or `username`? And wait...wasn't it `dbname`?" etc).
 
-So, one of the first things I did was build what would become [pg-utils Connection class](http://pg-utils.readthedocs.io/en/latest/connection.html). As long as you have the relevant environment variables set up, you can now just do:
+So, one of the first things I did was build what would become [pg-utils Connection class](https://pg-utils.readthedocs.io/en/latest/connection.html). As long as you have the relevant environment variables set up, you can now just do:
 
 {% highlight python %}
 
@@ -41,7 +41,7 @@ Easy to remember!
 
 * __Bits and Pieces of the Pandas API, With Calculations Done In The Database__
 
-While [Pandas is great at manipulating datasets that are large enough to fit on one machine, but possibly not large enough to fit into memory](http://stackoverflow.com/questions/14262433/large-data-work-flows-using-pandas/14268804#14268804), concerns over performance and data security can sometimes make analysis in the database more convenient.
+While [Pandas is great at manipulating datasets that are large enough to fit on one machine, but possibly not large enough to fit into memory](https://stackoverflow.com/questions/14262433/large-data-work-flows-using-pandas/14268804#14268804), concerns over performance and data security can sometimes make analysis in the database more convenient.
 
 Other than `Connection`, the main class is `Table`, that acts as a metadata wrapper that performs (some) calculations in a lazy manner. For example, this creates a table in the database with one million rows and two columns: `x`, which is uniformly distributed on the interval `[0,1)`, and `y` which is drawn from the standard normal distribution.
 
@@ -86,7 +86,7 @@ However, it turns out there's an easier way...
 
 * __It turns out that Apache Spark does most of this...__
 
-We can replicate most of this in [pyspark](http://spark.apache.org/docs/latest/api/python/index.html):
+We can replicate most of this in [pyspark](https://spark.apache.org/docs/latest/api/python/index.html):
 
 {% highlight python %}
 
